--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,22 +6,29 @@
     <title>weather</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+        crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+        crossorigin=""></script>
+    <script src="js/coordinates.js" type="module"></script>
+    <script src="js/script.js" type="module"></script>
 </head>
 <body>
-    <header>
-        <h1>weather</h1>
-    </header>
     <main>
-        <div class="forecast-container" id="index-forecast-container">
+        <div class="forecast-container" id="today-forecast-container"></div>
+        <div class="forecast-container" id="week-forecast-container"></div>
+        <div class="forecast-container" id="map-forecast-container">
+            <div class="map-item card">
+                <h1 class="weather-title">지역별 날씨</h1>
+                <div id="map"></div>
+            </div>
         </div>
-        <div class="forecast-container" id="weather-forecast-container">
-        </div>
-        <div class="forecast-container" id="weather-images-container">
-        </div>
+        <div class="forecast-container" id="weather-images-container"></div>
     </main>
     <footer>
-        <p>Contact: moonhongmyeong@gmail.com</p>
+        <p>Contact: <a href="mailto:moonhongmyeong@gmail.com">moonhongmyeong@gmail.com</a></p>
     </footer>
 </body>
 </html>
